# TrajectoryReconstructor

./: .gitignore  CMakeLists.txt  README.md
CatheterReconstructor/: CMakeLists.txt  CatheterReconstructor.py
Testdata/: MRTrackingTest.csv
TrajectoryReconstructor/: CMakeLists.txt  TrajectoryReconstructor.py
